# myscheduler

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  LICENSE  README.md  docker-compose.yaml  manage.py  pyproject.toml
myscheduler/: asgi.py  settings.py  urls.py  wsgi.py
myscheduler/applications/activities/: admin.py  apps.py  business.py  hooks.py  models.py
myscheduler/applications/authentication/: admin.py  apps.py  business.py  hooks.py  managers.py  models.py
myscheduler/applications/authentication/migrations/: 0001_initial.py
myscheduler/core/http/: hooks.py  session.py  settings.py
myscheduler/core/management/commands/: runbot.py  seed_db.py
myscheduler/core/utilities/: helpers.py
myscheduler/services/: bored_api.py  exceptions.py  four_devs.py
myscheduler/services/telegram/: bot.py  commands.py
scripts/: qcluster.sh  runbot.sh  runserver.sh  start.sh
