[tool.poetry]
name = "myscheduler"
version = "0.1.0"
description = ""
authors = ["Alexande Xavier <ale.bxsantos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.2"
psycopg2-binary = "^2.8.6"
python-telegram-bot = "^13.5"
requests = "^2.25.1"
urllib3 = "^1.26.4"
django-q = "^1.3.6"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
autoflake = "^1.4"
mypy = "^0.812"
flake8 = "^3.9.1"
black = "^21.5b0"
pytest = "^6.2.4"
pytest-django = "^4.2.0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
ensure_newline_before_comments = true
line_length = 120
skip_glob = ["**/migrations/*.py"]
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
lines_between_types = 1
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 120
target_version = ["py38"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | settings.py
  )/
)
'''


